--- a/ImplicitIntent/app/src/main/AndroidManifest.xml
+++ b/ImplicitIntent/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <!--
-    add permission to call
+    add permission to call , sms and camera
     -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-feature android:name="android.hardware.telephony" android:required="false"/>
 
     <application
