--- a/ImplicitIntent/app/src/main/AndroidManifest.xml
+++ b/ImplicitIntent/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-feature android:name="android.hardware.telephony" android:required="false"/>
-
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
